Handle exceptions and update README